[package]
name = "mklittlefs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.2"
littlefs2 = "0.4.0"


[build-dependencies]
anyhow = "1.0.70"
vergen = {version="8.1.1", features=["cargo","git","git2","build"]}